major ui theming and components

--- a/client/containers/mainAppFrame.html
+++ b/client/containers/mainAppFrame.html
@@ -8,7 +8,7 @@
 
 
 <template name="bareAppFrame">
-  <div id="app-wrapper" class="container-fluid">
+  <div id="app-wrapper" class="container-fluid bg-img-brand">
     {{> Template.dynamic template=content}}
   </div>
 </template>
