Adding ui improvements to forms, as well as icons assets and branding

--- a/client/containers/appFrames.html
+++ b/client/containers/appFrames.html
@@ -8,6 +8,7 @@
 
 
 <template name="bareAppFrame">
+  {{> swirlBG}}
   <div id="app-wrapper" class="container-fluid bg-img-brand">
     {{> Template.dynamic template=content}}
   </div>
@@ -20,3 +21,4 @@
     {{> Template.dynamic template=content}}
   </div>
 </template>
+
