--- a/client/lib/walletAssetDetails.html
+++ b/client/lib/walletAssetDetails.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="col-6 my-4 text-center">
-          <input type="button" class="btn btn-primary w-100" data-nav="{{pathFor 'walletReceive'}}" value="recieve">
+          <input type="button" class="btn btn-primary w-100" data-nav="{{pathFor 'walletReceive'}}" value="receive">
           {{#if freezable}}
           <input type="button" class="btn btn-text mt-3" value="Unfreeze">
           <div class="small">Unfreeze assets on address</div>
