--- a/client/lib/head.html
+++ b/client/lib/head.html
@@ -1,3 +1,4 @@
 <head>
   <!-- <script src="node_modules/argon2-browser/lib/argon2.js"></script> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
