--- a/client/containers/appFrames.html
+++ b/client/containers/appFrames.html
@@ -8,7 +8,7 @@
 
 
 <template name="bareAppFrame">
-  {{> swirlBG}}
+  {{!-- {{> swirlBG}} --}}
   <div id="app-wrapper" class="container-fluid bg-img-brand">
     {{> Template.dynamic template=content}}
   </div>
